AC_PREREQ(2.52)

AC_INIT(netspeed_applet, 0.13, http://www.wh-hms.uni-ulm.de/~mfcn/netspeed)
AC_CONFIG_SRCDIR(src/netspeed.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AC_PROG_INTLTOOL([0.21])

AM_PROG_LIBTOOL
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET


ALL_LINGUAS="cs de es et fr hu it ja ms nl pt_BR ro ru sv tr zh_CN"
AM_GLIB_GNU_GETTEXT
GETTEXT_PACKAGE=netspeed_applet
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", GETTEXT_PACKAGE)

PKG_CHECK_MODULES(NETSPEED, libgnomeui-2.0 >= 2.8.0 libpanelapplet-2.0 libgtop-2.0 >= 2.10.0)

AC_SUBST(NETSPEED_APPLET_CFLAGS)
AC_SUBST(NETSPEED_APPLET_LIBS)


AC_OUTPUT([
netspeed_applet.spec
Makefile
src/Makefile
po/Makefile.in
pixmaps/Makefile
docs/Makefile
docs/C/Makefile
docs/cs/Makefile
docs/de/Makefile
docs/ru/Makefile
docs/es/Makefile
])
